--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </div>
 </body>
 <footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </footer>
 </html>
